Fixed spacing on large text elements, incorrect spacing and improper use of separators

--- a/src/app/pages/test-results-search/components/advanced-search/advanced-search.scss
+++ b/src/app/pages/test-results-search/components/advanced-search/advanced-search.scss
@@ -13,8 +13,8 @@
   }
 
   .search-spinner {
-    margin-top: 32px;
-    margin-left: 700px;
+    margin-top: 34px;
+    margin-left: 686px;
     position: absolute;
   }
 
