--- a/src/app/pages/view-test-result/components/view-test-header/view-test-header.scss
+++ b/src/app/pages/view-test-result/components/view-test-header/view-test-header.scss
@@ -8,8 +8,6 @@
     color: black;
   }
   .grade-styling{
-    position: relative;
-    right: 90px;
     width: 400px;
   }
 }
